feat: Added Download links and improved dev guide

--- a/docs/developer-guide/Developer-Getting-Started.mdx
+++ b/docs/developer-guide/Developer-Getting-Started.mdx
@@ -3,6 +3,9 @@ sidebar_label: 'Getting Started'
 sidebar_position: 1
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 MiniPlaceholders is a plugin and mod that allows you to register global placeholders based on [Adventure Components](https://docs.advntr.dev/text.html) to be used in other plugin/mods instances.
 
 Requires [Paper](https://papermc.io/software/paper) 1.21 and higher, [Velocity](https://papermc.io/software/velocity) 3.3.0 and higher, [Fabric](https://fabricmc.net/) 1.21.1+ or [Sponge](https://spongepowered.org/) API 8+.
@@ -23,25 +26,31 @@ If you want a template to create your next expansion, you can use our template h
 
 
 #### Gradle
-```kotlin
-repositories {
-  mavenCentral()
-}
 
-dependencies {
-  compileOnly("io.github.miniplaceholders:miniplaceholders-api:3.0.1")
-}
-```
+<Tabs groupId="build-system">
+  <TabItem value="gradle" label="Gradle" default>
+    ```kotlin
+      repositories {
+        mavenCentral()
+      }
 
-#### Maven
-```xml
-<dependency>
-    <groupId>io.github.miniplaceholders</groupId>
-    <artifactId>miniplaceholders-api</artifactId>
-    <version>3.0.1</version>
-    <scope>provided</scope>
-</dependency>
+      dependencies {
+        compileOnly("io.github.miniplaceholders:miniplaceholders-api:3.0.1")
+      }
+    ```
+  </TabItem>
+  <TabItem value="maven" label="Maven">
+    ```xml
+    <dependency>
+      <groupId>io.github.miniplaceholders</groupId>
+      <artifactId>miniplaceholders-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
 ```
+  </TabItem>
+</Tabs>
+
 
 ## Kotlin Extra ![](https://img.shields.io/maven-central/v/io.github.miniplaceholders/miniplaceholders-kotlin-ext?style=flat-square)
 
@@ -51,13 +60,27 @@ Kotlin Extra is an API submodule that makes it easy to develop Expansions in Kot
 
 It can only be used in environments that provide kotlin-stdlib, such as Krypton, Fabric with [Fabric Language Kotlin](https://modrinth.com/mod/fabric-language-kotlin), or with plugins that provide it, such as [MCKotlin](https://modrinth.com/plugin/mckotlin)
 
-#### Gradle
-```kotlin
-repositories {
-  mavenCentral()
-}
 
-dependencies {
-  compileOnly("io.github.miniplaceholders:miniplaceholders-kotlin-ext:3.0.1")
-}
+<Tabs groupId="build-system">
+  <TabItem value="gradle" label="Gradle" default>
+    ```kotlin
+      repositories {
+        mavenCentral()
+      }
+
+      dependencies {
+        compileOnly("io.github.miniplaceholders:miniplaceholders-kotlin-ext:3.0.1")
+      }
+    ```
+  </TabItem>
+  <TabItem value="maven" label="Maven">
+    ```xml
+    <dependency>
+      <groupId>io.github.miniplaceholders</groupId>
+      <artifactId>miniplaceholders-kotlin-ext</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
 ```
+  </TabItem>
+</Tabs>
