docs: Removed old wiki references

--- a/docs/developer-guide/Developer-Getting-Started.mdx
+++ b/docs/developer-guide/Developer-Getting-Started.mdx
@@ -10,7 +10,7 @@ MiniPlaceholders is a plugin and mod that allows you to register global placehol
 
 Requires [Paper](https://papermc.io/software/paper) 1.21 and higher, [Velocity](https://papermc.io/software/velocity) 3.3.0 and higher, [Fabric](https://fabricmc.net/) 1.21.1+ or [Sponge](https://spongepowered.org/) API 8+.
 
-To continue, you first need knowledge of [MiniMessage](https://docs.adventure.kyori.net/minimessage/index.html). To see how to use the MiniMessage API in MiniPlaceholders, [check this section](https://github.com/MiniPlaceholders/MiniPlaceholders/wiki/MiniMessage-API-in-MiniPlaceholders).
+To continue, you first need knowledge of [MiniMessage](https://docs.adventure.kyori.net/minimessage/index.html). To see how to use the MiniMessage API in MiniPlaceholders, [check this section](docs/developer-guide/MiniMessage-API-in-MiniPlaceholders.md).
 
 To use MiniPlaceholders API, you need Java 21 at least
 
