feat: Reworked commands docs and added title to many pages

--- a/docs/developer-guide/Developer-Getting-Started.mdx
+++ b/docs/developer-guide/Developer-Getting-Started.mdx
@@ -1,4 +1,5 @@
 ---
+title: Getting Started
 sidebar_label: 'Getting Started'
 sidebar_position: 1
 ---
@@ -56,7 +57,7 @@ If you want a template to create your next expansion, you can use our template h
 
 Kotlin Extra is an API submodule that makes it easy to develop Expansions in Kotlin environments.
 
-It can only be used in environments that provide kotlin-stdlib, such as Krypton, Fabric with [Fabric Language Kotlin](https://modrinth.com/mod/fabric-language-kotlin), or with plugins that provide it, such as [MCKotlin](https://modrinth.com/plugin/mckotlin)
+It can only be used in environments that provide kotlin-stdlib, such as Fabric with [Fabric Language Kotlin](https://modrinth.com/mod/fabric-language-kotlin), or with plugins that provide it, such as [MCKotlin](https://modrinth.com/plugin/mckotlin)
 
 
 <Tabs groupId="build-system">
